--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #
 # JDBC properties
 #
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:38225/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=FhpQrvIOxklWTyaZqoFKvAEBISrhdeya
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
