updating app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+MYSQLHOST=mysql.railway.internal
+MYSQLPORT=3306
+MYSQL_DATABASE=railway
+MYSQLPASSWORD=FhpQrvIOxklWTyaZqoFKvAEBISrhdeya
+MYSQLUSER=root
+MYSQLURL=mysql://root:FhpQrvIOxklWTyaZqoFKvAEBISrhdeya@mysql.railway.internal:3306/railway
+MYSQL_ROOT_PASSWORD=FhpQrvIOxklWTyaZqoFKvAEBISrhdeya
+MYSQL_PUBLIC_URL=mysql://root:FhpQrvIOxklWTyaZqoFKvAEBISrhdeya@shinkansen.proxy.rlwy.net:38225/railway
