--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 #
 # JDBC properties
+
+
+
+#The database information is hard-coded for ease-of-access
+#This is a huge security risk and should not be done but
+#For a small scale app like this it can stay.
+#
 #
 spring.datasource.url=jdbc:mysql://shinkansen.proxy.rlwy.net:38225/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
